# object-detection-dofus-bot

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: python-tests.yml
conf/: logging.yml
conf/base/: catalog.yml  credentials.yml  globals.yml  parameters.yml
docs/source/: conf.py  index.rst
src/object_detection_dofus_bot/: __init__.py  __main__.py
src/object_detection_dofus_bot/datasets/: application.py  cometml.py
src/object_detection_dofus_bot/pipelines/botting/: __init__.py  agent.py  dofus.py  env.py
src/object_detection_dofus_bot/pipelines/botting/actions/: __init__.py  collect.py  map.py
src/object_detection_dofus_bot/pipelines/data_processing/: nodes.py  pipeline.py
tests/: conftest.py  test_run.py
tests/pipelines/botting/: test_agent.py  test_env.py
tests/pipelines/botting/actions/: test_collect.py  test_map.py
