[project]
name = "object_detection_dofus_bot"
readme = "README.md"
dynamic = [ "dependencies", "version",]

[project.scripts]
object_detection_dofus_bot = "object_detection_dofus_bot.__main__:main"

[tool.kedro]
package_name = "object_detection_dofus_bot"
project_name = "object_detection_dofus_bot"
kedro_init_version = "0.19.1"
tools = "[]"

[project.entry-points."kedro.hooks"]

[tool.pytest.ini_options]
addopts = """
--cov-report term-missing \
--cov src/object_detection_dofus_bot -ra
--log-cli-level=INFO"""

[tool.coverage.report]
fail_under = 0
show_missing = true
exclude_lines = ["pragma: no cover", "raise NotImplementedError"]

[tool.poetry]
name = "object_detection_dofus_bot"
version = "0.0.1"
description = "Ressources detection in dofus using Yolo and Roboflow"
authors = ["Clement Franger <clement.franger@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <3.13"
kedro = "^0.19.9"
kedro-viz = "^10.0.0"
kedro-datasets = "^5.1.0"
kedro-docker = "^0.6.1"
ultralytics="^8.3.39"
pyautogui = "^0.9.54"
comet-ml = "^3.47.4"
opencv-python = "^4.10.0.84"
gymnasium = "^1.0.0"
opencv-contrib-python = "^4.10.0.84"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"
ruff = "^0.6.9"
pytest = "^8.3.3"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
